add e2e test && move health-check to api
