# main.go
@@ -1,26 +1,21 @@
 package main
 
 import (
-	"net/http"
 	"os"
+	"strconv"
 
 	"github.com/kot13/vertigo/handlers"
+	"github.com/kot13/vertigo/restapi"
+	"github.com/kot13/vertigo/restapi/operations"
 	"github.com/kot13/vertigo/version"
 
 	log "github.com/Sirupsen/logrus"
+	"github.com/go-openapi/loads"
 )
 
 func init() {
 	log.SetFormatter(&log.JSONFormatter{})
 	log.SetOutput(os.Stdout)
-	log.SetLevel(log.FatalLevel)
-}
-
-func main() {
-	port := os.Getenv("PORT")
-	if port == "" {
-		log.Fatal("Port is not set.")
-	}
 
 	logLevel := os.Getenv("LOG_LEVEL")
 	if logLevel == "" {
@@ -29,13 +24,44 @@ func main() {
 
 	level, err := log.ParseLevel(logLevel)
 	if err != nil {
-		log.Fatal("Error parse log level: %s\n", err)
+		log.Fatalf("Error parse log level: %s\n", err)
 	} else {
 		log.SetLevel(level)
 	}
+}
 
-	log.Debugf("Starting the service. Commit: %s, build time: %s, release: %s", version.Commit, version.BuildTime, version.Release)
+func main() {
+	port := os.Getenv("PORT")
+	if port == "" {
+		log.Fatal("Port is not set.")
+	}
 
-	http.HandleFunc("/health-check", handlers.HealthCheck)
-	http.ListenAndServe(":"+port, nil)
+	iport, err := strconv.Atoi(port)
+	if err != nil {
+		log.Fatal("Port is not valid.")
+	}
+
+	log.Infof("Starting the service. Commit: %s, build time: %s, release: %s", version.Commit, version.BuildTime, version.Release)
+
+	swaggerSpec, err := loads.Analyzed(restapi.SwaggerJSON, "")
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	api := operations.NewVertigoAPI(swaggerSpec)
+
+	api.Logger = log.Infof
+
+	api.GetAdvertHandler = operations.GetAdvertHandlerFunc(handlers.GetAdverts)
+	api.GetHealthCheckHandler = operations.GetHealthCheckHandlerFunc(handlers.HealthCheck)
+
+	server := restapi.NewServer(api)
+	defer server.Shutdown()
+
+	server.Port = iport
+
+	err = server.Serve()
+	if err != nil {
+		log.Fatal(err)
+	}
 }
